--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
@@ -15,7 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
-    "mongoose": "^7.6.3",
+    "mongoose": "^7.6.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
